--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		<p class="centertext"><a class="picture" href="music.html"><img src="musicheader.png" width="450" height="300" alt="Music festival with a huge crowd and yellow confetti. Text'Music' on top."/></a><a class="picture" href="wheretotravel.html"><img src="travelheader.png" width=450 height=300 alt="Girl standing in front of a street market with bright red and yellow lights. Text'Where to Travel' on top."/></a></p>
 		<p class="centertext"><a class="picture" href="outfits.html"><img src="outfitsheader.png" width="450" height="300" alt="Girl standing in a red flowered dress with a small black purse in front of the Eiffel Tower"/></a><a class="picture" href="bucketlist.html"><img src="bucketlistheader.png" width="450" height="300" alt="Girl jumping off a cliff into water during sunset. Text 'Bucket List' on top."/></a></p>
 		
-		<a href="http://validator.w3.org/check?uri=https://huclaire.github.io/home/">Validator Link</a>
+		<a href="citations.html">Citations</a>
+		<a href="http://validator.w3.org/check?uri=https://huclaire.github.io/home/"><img src="html5.jpg" alt="html 5 logo" width="20" height="20"/></a>
 	</body>
 
 </html>
