--- a/music.html
+++ b/music.html
@@ -59,7 +59,7 @@
 		<p>Find more <a href="index.html">Summer Essentials</a>!</p>
 		<!--linking back to top of the page-->
 		<p><a href="#top"><img src="arrow.png" alt="Transparent background up arrow." width="30" height="50"></a> Back to Top</p>
+	<a href="http://validator.w3.org/check?uri=https://huclaire.github.io/home/"><img src="html5.jpg" alt="html 5 logo" width="20" height="20"/></a>
 	</body>			
 </html>
 
-<a href="http://validator.w3.org/check?uri=https://huclaire.github.io/home/">Validator Link</a>
