--- a/citations.html
+++ b/citations.html
@@ -44,6 +44,6 @@
 			Munday, M. (2019, April 19). ASAP Rocky. Retrieved from https://www.biography.com/musician/asap-rocky
 
 			Shultz, A. (2018, November 20). Lil Yachty on Loving 'Big Mouth' and Having a Case of Too-High-to-Function Giggles. Retrieved from https://www.gq.com/story/lil-yachty-is-big-mouths-biggest-fan</p>
-		
+		<a href="http://validator.w3.org/check?uri=https://huclaire.github.io/home/"><img src="html5.jpg" alt="html 5 logo" width="50" height="50"/></a>
 		</body>
 	</html>
