--- a/bucketlist.html
+++ b/bucketlist.html
@@ -33,12 +33,12 @@
 					<li>Have/go to a pool party.</li>
 					<li>Have a beach picnic</li>
 					<li>Rent bikes downtown and discover new areas of the city.</li>
-					<img src="biking.jpg" alt="girl riding bike with feet off pedals. Palm trees and buildings in the background." width="500" height="600/"><a class="picture"><img src="biking2.jpg" alt="2 girls riding bikes downtown." width="500" height="600/"></a>
+					<img src="biking.jpg" alt="girl riding bike with feet off pedals. Palm trees and buildings in the background." width="500" height="600/"><img src="biking2.jpg" alt="2 girls riding bikes downtown." width="500" height="600/">
 					<li>Pull an all nighter</li>
 					<li>Get a summer job</li>
 					<li>Spend 5 days without a phone</li>
 					<li>Listen to a new music genre</li>
-					<img src="asaprocky.jpg" alt="ASAP Rocky fixing bandana while looking at the camera." width="400" height="400"/><a class="picture"><img src="lilyachty.jpg" alt="Lil Yachty surprised with hands on face" width="600" height="400"/></a>
+					<img src="asaprocky.jpg" alt="ASAP Rocky fixing bandana while looking at the camera." width="400" height="400"/><img src="lilyachty.jpg" alt="Lil Yachty surprised with hands on face" width="600" height="400"/>
 				</ul>
 		<!--linking back to home page-->
 		<p>Find more <a href="index.html">Summer Essentials</a>!</p>
