--- a/citations.html
+++ b/citations.html
@@ -7,43 +7,43 @@
 		</head>
 		<body>
 			<h1>Citations:</h1>
-			<p>Region, T. (n.d.). General. Retrieved from https://bellwetherfest.com/info.html
+			<p>Region, T. (n.d.). General. Retrieved from https://bellwetherfest.com/info.html</p>
 
-			Bloom, L. B. (2019, May 29). The 38 Cheapest Places To Travel In 2019. Retrieved from https://www.forbes.com/sites/laurabegleybloom/2018/12/18/the-cheapest-places-to-travel-in-2019/
+			<p>Bloom, L. B. (2019, May 29). The 38 Cheapest Places To Travel In 2019. Retrieved from https://www.forbes.com/sites/laurabegleybloom/2018/12/18/the-cheapest-places-to-travel-in-2019/</p>
 
-			The Runway Journal. (2014, October 25). Retrieved from http://therunwayjournal.com/?p=388
+			<p>The Runway Journal. (2014, October 25). Retrieved from http://therunwayjournal.com/?p=388</p>
 
-			This summer you should wear casual fashion clothes 2019. (2019, March 19). Retrieved from https://outfits.design/this-summer-you-should-wear-casual-fashion-clothes-2019/
+			<p>This summer you should wear casual fashion clothes 2019. (2019, March 19). Retrieved from https://outfits.design/this-summer-you-should-wear-casual-fashion-clothes-2019/</p>
 
-			Gonzales, E. (2019, March 26). Kacey Musgraves Is Playing at Outside Lands So Giddy Up & Get Tickets. Retrieved from https://www.harpersbazaar.com/culture/art-books-music/g25736409/summer-music-festivals-2019/
+			<p>Gonzales, E. (2019, March 26). Kacey Musgraves Is Playing at Outside Lands So Giddy Up & Get Tickets. Retrieved from https://www.harpersbazaar.com/culture/art-books-music/g25736409/summer-music-festivals-2019/</p>
 
-			Veld announces its 2018 headliners. (n.d.). Retrieved from https://www.blogto.com/music/2018/02/veld-music-festival-2018-lineup/
+			<p>Veld announces its 2018 headliners. (n.d.). Retrieved from https://www.blogto.com/music/2018/02/veld-music-festival-2018-lineup/</p>
 
-			Abandoned quarry is an epic swimming hole one hour from Toronto. (n.d.). Retrieved from https://www.blogto.com/sports_play/2017/06/elora-quarry-swimming-hole-toronto/
+			<p>Abandoned quarry is an epic swimming hole one hour from Toronto. (n.d.). Retrieved from https://www.blogto.com/sports_play/2017/06/elora-quarry-swimming-hole-toronto/</p>
 
-			Ophardt, J. (2016, May 11). Want to visit Webster's Falls? Be ready to pay $15. Retrieved from https://www.thespec.com/news-story/6547972-want-to-visit-webster-s-falls-be-ready-to-pay-15/
+			<p>Ophardt, J. (2016, May 11). Want to visit Webster's Falls? Be ready to pay $15. Retrieved from https://www.thespec.com/news-story/6547972-want-to-visit-webster-s-falls-be-ready-to-pay-15/</p>
 
-			25 Best Beach Outfits For Women. (n.d.). Retrieved from https://www.pinterest.ca/pin/832321574853001139/
+			<p>25 Best Beach Outfits For Women. (n.d.). Retrieved from https://www.pinterest.ca/pin/832321574853001139/</p>
 
-			UO Cassia Puff Sleeve Cropped Top. (n.d.). Retrieved from https://www.urbanoutfitters.com/shop/uo-cassia-puff-sleeve-cropped-top?category=SEARCHRESULTS&color=015
+			<p>UO Cassia Puff Sleeve Cropped Top. (n.d.). Retrieved from https://www.urbanoutfitters.com/shop/uo-cassia-puff-sleeve-cropped-top?category=SEARCHRESULTS&color=015</p>
 
-			Urban Renewal Recycled Acid Wash Pull-On Denim Short. (n.d.). Retrieved from https://www.urbanoutfitters.com/shop/urban-renewal-recycled-acid-wash-pull-on-denim-short?category=SEARCHRESULTS&color=091
+			<p>Urban Renewal Recycled Acid Wash Pull-On Denim Short. (n.d.). Retrieved from https://www.urbanoutfitters.com/shop/urban-renewal-recycled-acid-wash-pull-on-denim-short?category=SEARCHRESULTS&color=091</p>
 
-			UO Puff Sleeve Babydoll Dress. (n.d.). Retrieved from https://www.urbanoutfitters.com/shop/uo-puff-sleeve-babydoll-dress?category=SEARCHRESULTS&color=010
+			<p>UO Puff Sleeve Babydoll Dress. (n.d.). Retrieved from https://www.urbanoutfitters.com/shop/uo-puff-sleeve-babydoll-dress?category=SEARCHRESULTS&color=010</p>
 
-			The Ultimate Road Trip Packing List 2019 (inc FREE PDF Checklist!). (2019, April 26). Retrieved from https://maketimetoseetheworld.com/road-trip-packing-list/
+			<p>The Ultimate Road Trip Packing List 2019 (inc FREE PDF Checklist!). (2019, April 26). Retrieved from https://maketimetoseetheworld.com/road-trip-packing-list/</p>
 
-			Yyk. (2018, December 24). 51 Stylish Acrylic Nail Designs for New Year 2019. Retrieved from https://www.seshell.com/nails/51-stylish-acrylic-nail-designs-for-new-year-2019/
+			<p>Yyk. (2018, December 24). 51 Stylish Acrylic Nail Designs for New Year 2019. Retrieved from https://www.seshell.com/nails/51-stylish-acrylic-nail-designs-for-new-year-2019/</p>
 
-			Puttock, R. (2019, March 16). 23 Neon Nail Designs That Are Perfect for Summer. Retrieved from https://stayglam.com/beauty/neon-nails/
+			<p>Puttock, R. (2019, March 16). 23 Neon Nail Designs That Are Perfect for Summer. Retrieved from https://stayglam.com/beauty/neon-nails/</p>
 
-			15 Quick Hikes, Blue Ridge Parkway. (n.d.). Retrieved from https://www.romanticasheville.com/blue_ridge_parkway_hiking_trail.htm
+			<p>15 Quick Hikes, Blue Ridge Parkway. (n.d.). Retrieved from https://www.romanticasheville.com/blue_ridge_parkway_hiking_trail.htm</p>
 
-			Siemens, J. (n.d.). A female riding a bike. Retrieved from https://www.gettyimages.ca/detail/photo/woman-road-biking-in-the-city-high-res-stock-photography/145671999
+			<p>Siemens, J. (n.d.). A female riding a bike. Retrieved from https://www.gettyimages.ca/detail/photo/woman-road-biking-in-the-city-high-res-stock-photography/145671999</p>
 
-			Munday, M. (2019, April 19). ASAP Rocky. Retrieved from https://www.biography.com/musician/asap-rocky
+			<p>Munday, M. (2019, April 19). ASAP Rocky. Retrieved from https://www.biography.com/musician/asap-rocky</p>
 
-			Shultz, A. (2018, November 20). Lil Yachty on Loving 'Big Mouth' and Having a Case of Too-High-to-Function Giggles. Retrieved from https://www.gq.com/story/lil-yachty-is-big-mouths-biggest-fan</p>
+			<p>Shultz, A. (2018, November 20). Lil Yachty on Loving 'Big Mouth' and Having a Case of Too-High-to-Function Giggles. Retrieved from https://www.gq.com/story/lil-yachty-is-big-mouths-biggest-fan</p></p>
 		<a href="http://validator.w3.org/check?uri=https://huclaire.github.io/home/"><img src="html5.jpg" alt="html 5 logo" width="50" height="50"/></a>
 		</body>
 	</html>
